--- a/Consultoria.Bee.MVC/Views/Produto/Create.cshtml
+++ b/Consultoria.Bee.MVC/Views/Produto/Create.cshtml
@@ -24,6 +24,12 @@
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CategoriaId" class="control-label"></label>
+                <select asp-for="CategoriaId" class="form-control"
+                    asp-items="@ViewBag.ListOfCategorias"></select>
+                <span asp-validation-for="CategoriaId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
